--- a/src/app/nations/nations.component.html
+++ b/src/app/nations/nations.component.html
@@ -9,7 +9,7 @@
 
     <div class="div-card margin-side text-align-center background-fill-white" *ngFor="let region of regions; index as i">
       
-      <a routerLink="/regions/{{region.region_id}}">
+      <a routerLink="/region/{{region.region_id}}">
         
         <h2 class="golden">{{region.region_name}}</h2>
 
