--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,15 +1,15 @@
 <section>
     
-    <h1 class="detailedpage-header">{{ order.order_name }}</h1>
+    <h1 class="detailedpage-header">{{ name }}</h1>
     
     <article class="two-page-grid">
         <div class="nationleftside">
             
             <h2 class="text-align-center">Description</h2>
-            <div [innerHTML]="order.order_description | sanitizeHtml"></div>
+            <div [innerHTML]="description | sanitizeHtml"></div>
             
             <h2 class="mainhub text-align-center">Headquarters</h2>
-            <h3 class="text-align-center"> {{ order.order_headquarters }}</h3>
+            <h3 class="text-align-center"> {{ headquarters }}</h3>
             
         </div>
         
@@ -17,25 +17,28 @@
             
             <!-- <div class="nationbanner" [innerHTML]="order.order_banner | sanitizeHtml"></div>            -->
             
-            <h2 class="blue"><em>{{ order.order_official_name }}</em></h2>
+            <h2 class="blue text-align-center"><em>{{ official_name }}</em></h2>
             
             <h3 class="blue">Scope</h3>
-            <p>{{order.order_scope}}</p>
+            <p>{{scope}}</p>
             
+            <h3 class="blue">Alignment</h3>
+            <p>{{alignment}}</p>
+
             <h3 class="blue">Values</h3>
-            <p>{{order.order_values}}</p>
+            <p>{{values}}</p>
             
             <h3 class="blue">Goals</h3>
-            <p>{{order.order_goals}}</p>
+            <div [innerHTML]="goals | sanitizeHtml"></div>
 
             <h3 class="blue">Allies</h3>
-            <p>{{order.order_allies}}</p>
+            <p>{{allies}}</p>
 
             <h3 class="blue">Enemies</h3>
-            <p>{{order.order_enemies}}</p>
+            <p>{{enemies}}</p>
 
             <h3 class="blue">Rivals</h3>
-            <p>{{order.order_rivals}}</p>
+            <p>{{rivals}}</p>
         </div>
     </article>
     
