--- a/src/app/AdminArea/admin-area/admin-area.component.html
+++ b/src/app/AdminArea/admin-area/admin-area.component.html
@@ -1,89 +1,98 @@
 <section class="container">
     <h1>Administrator Backoffice</h1>
     
-    
-    
-    <ul>
-        <li class="button_holder">           
-            <button title="nations-button" (click)="toggleNationsTab()">Nations</button>
-            <div *ngIf="revealNations">
-                <ul class="dropdown">
+    <ul class="adminarea">
+        <li class="button_holder fake-button">           
+            Nations
+            <div class="dropdown">
+                <ul >
                     <li>
-                        <div class="tabconfig"><a routerLink="/create-nation">Create Nation</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/create-nation">Create Nation</a></div>
                     </li>
                     <li>
-                        <div class="tabconfig"><a routerLink="/update-nation">Update Nation</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/update-nation">Update Nation</a></div>
                     </li>
                     <li>
-                        <div class="tabconfig"><a routerLink="/delete-nation">Delete Nation</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-nation">Delete Nation</a></div>
                     </li>
                     <li>
-                        <div class="tabconfig"><a routerLink="/create-nation-trait">Create Nation Trait</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/create-nation-trait">Create Nation Trait</a></div>
                     </li>
                     <li>
-                        <div class="tabconfig"><a routerLink="/update-nation-trait">Update Nation Trait</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/update-nation-trait">Update Nation Trait</a></div>
                     </li>
                     <li>
-                        <div class="tabconfig"><a routerLink="/delete-nation-trait">Delete Nation Trait</a></div>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-nation-trait">Delete Nation Trait</a></div>
+                    </li>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/give-trait">Give Trait to Nation</a></div>
+                    </li>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/remove-trait">Remove Trait from Nation</a></div>
                     </li>
                 </ul>
             </div>           
         </li>
         
-        <li class="button_holder">
-            <button title="religions-button" (click)="toggleReligionsTab()">Religions</button>
-            <div *ngIf="revealReligions">
-                <ul class="dropdown">
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/create-pantheon">Create Pantheon</a></div>
+        <li class="button_holder fake-button">
+            Religions
+            <div class="dropdown">
+                <ul >
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/create-pantheon">Create Pantheon</a></div>
                     </li>
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/update-pantheon">Update Pantheon</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/update-pantheon">Update Pantheon</a></div>
                     </li>
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/delete-pantheon">Delete Pantheon</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-pantheon">Delete Pantheon</a></div>
                     </li>
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/create-god">Create God</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/create-god">Create God</a></div>
                     </li>
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/update-god">Update God</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/update-god">Update God</a></div>
                     </li>
-                    <li class="adminTab">
-                        <div class="tabconfig"><a routerLink="/delete-god">Delete God</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-god">Delete God</a></div>
+                    </li>
+                </ul>
+            </div>
+        </li>
+
+        <li class="button_holder fake-button">
+            Orders
+            <div class="dropdown">
+                <ul >
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/create-order">Create Orders</a></div>
+                    </li>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/update-order">Update Orders</a></div>
+                    </li>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-order">Delete Orders</a></div>
                     </li>
                 </ul>
             </div>
         </li>
         
-        <li class="button_holder">
-            <button title="orders-button" (click)="toggleOrdersTab()">Orders</button>
-            <div *ngIf="revealOrders">
-                <ul class="dropdown">
-                    <li class="admin-tab">
-                        <div class="tabconfig"><a routerLink="/create-order">Create Orders</a></div>
+        <li class="button_holder fake-button">
+            Users
+            <div class="dropdown">
+                <ul>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/delete-user">delete user</a></div>
                     </li>
-                    <li class="admin-tab">
-                        <div class="tabconfig"><a routerLink="/update-order">Update Orders</a></div>
-                    </li>
-                    <li class="admin-tab">
-                        <div class="tabconfig"><a routerLink="/delete-order">Delete Orders</a></div>
-                    </li>
-                </ul>
-            </div>
-        </li>
-        
-        <li class="button_holder">
-            <button title="users-button" (click)="toggleUsersTab()">Users</button>
-            <div *ngIf="revealUsers">
-                <ul class="dropdown">
-                    <li class="admin-tab">
-                        <div class="tabconfig"><a routerLink="">modify user rights</a></div>
+                    <li>
+                        <div class="tabconfig"><a routerLink="/admin-backoffice/user-rights">modify user rights</a></div>
                     </li>
                 </ul>
             </div>
         </li>
 
     </ul>    
+    
+    <router-outlet></router-outlet>
     
 </section>
