--- a/src/app/AdminArea/create-nation-trait/create-nation-trait.component.html
+++ b/src/app/AdminArea/create-nation-trait/create-nation-trait.component.html
@@ -3,22 +3,26 @@
     <h1>Create Nation Trait</h1>
     
     <div class="registryForm">
-        <form method="post" [formGroup]="createTrait" (ngSubmit)="onSubmit()">
+        <form [formGroup]="createTrait" (ngSubmit)="onSubmit(createTrait.value)">
             <h5 class="red-alert" role="alert" *ngIf="Message">{{Message}}</h5>
+
+            <h5 class="red-alert" role="alert" *ngIf="createTrait.controls['trait_name'].errors?.required" style=" text-transform: none;">A Name is required</h5>
             <div>
                 <label>
                     Trait Name
                     <input type="text" formControlName="trait_name" name="name" required="" minlength="8" maxlength="40">
                 </label>
             </div>
-            <div>
+            <h5 class="red-alert" role="alert" *ngIf="createTrait.controls['trait_description'].errors?.required" style=" text-transform: none;">A description is Requreid</h5>
+            <div class="box">
                 Trait Description
-                <input type="text" formControlName="trait_description" name="description" required="" minlength="8" maxlength="10000">
+                <ckeditor [editor]="Editor" [config]="{toolbar: ['heading','bold','italic','bulletedList', 'numberedList']}" formControlName="trait_description" name="description" required="" minlength="8" maxlength="65535"></ckeditor>
             </div>
             <div>
                 <button type="submit" name="send">Submit</button>
             </div>
         </form>
+        <h5 class="green-alert" role="alert" *ngIf="success">Trait Created successfully!</h5>
     </div>
 
 </section>
