--- a/src/app/AdminArea/create-nation-trait/create-nation-trait.component.scss
+++ b/src/app/AdminArea/create-nation-trait/create-nation-trait.component.scss
@@ -1,5 +1,12 @@
+h1 {
+    padding: 15px 0;
+}
 div {
     padding: 5px;
+}
+.box {
+    width: 40%;
+    margin: 0 auto;
 }
 .registryForm {
     text-align: center;
@@ -11,4 +18,12 @@ form .ng-invalid.ng-touched {
     color: red;
     text-shadow: 1px 1px 1px black;
     font-weight: 800;
+    padding: 5px;
+
+}
+.green-alert {
+    color: rgb(2, 194, 2);
+    text-shadow: 1px 1px 1px #000;
+    font-weight: 800;
+    padding: 5px;
 }
