--- a/src/app/AdminArea/create-nation/create-nation.component.scss
+++ b/src/app/AdminArea/create-nation/create-nation.component.scss
@@ -1,8 +1,17 @@
+h1 {
+    padding: 30px 0;
+}
+
 div {
     padding: 5px;
 }
+.box {
+    width: 40%;
+    margin: 0 auto;
+}
 .registryForm {
     text-align: center;
+    padding-bottom: 15px;
 }
 form .ng-invalid.ng-touched {
     border: 2px solid #F00;
@@ -11,4 +20,10 @@ form .ng-invalid.ng-touched {
     color: red;
     text-shadow: 1px 1px 1px black;
     font-weight: 800;
+}
+.green-alert {
+    color: rgb(2, 194, 2);
+    text-shadow: 1px 1px 1px #000;
+    font-weight: 800;
+    padding: 5px;
 }
