--- a/src/app/AdminArea/delete-nation/delete-nation.component.scss
+++ b/src/app/AdminArea/delete-nation/delete-nation.component.scss
@@ -1,6 +1,21 @@
+h1 {
+    padding: 15px 0;
+}
 div {
     padding: 5px;
 }
 .registryForm {
     text-align: center;
+}
+.red-alert {
+    color: red;
+    text-shadow: 1px 1px 1px black;
+    font-weight: 800;
+    padding: 5px;
+}
+.green-alert {
+    color: rgb(2, 194, 2);
+    text-shadow: 1px 1px 1px #000;
+    font-weight: 800;
+    padding: 5px;
 }
