--- a/src/app/AdminArea/delete-pantheon/delete-pantheon.component.html
+++ b/src/app/AdminArea/delete-pantheon/delete-pantheon.component.html
@@ -2,25 +2,29 @@
 
     <h1>Delete Pantheon</h1>
     
-    <form action="" [formGroup]="deletePantheon">
-        
+    <form action="" [formGroup]="deletePantheon" (ngSubmit)="onSubmit()">
+        <h5 class="red-alert" role="alert" *ngIf="deletePantheon.controls['chosen'].errors?.required" style=" text-transform: none;">Please Choose a Pantheon</h5>
+        <h5 class="red-alert" role="alert" *ngIf="message">{{message}}</h5>
+
         <div>
             <label>
                 Which Pantheon you want to delete?
-                <select name="chosenPantheon">
-                    <option *ngFor="let pantheon of pantheons; index as i" value="{{pantheon.pantheon_id]]">{{pantheon.pantheon_name}}</option>
+                <select name="chosenPantheon" formControlName="chosen" (change)="choosePantheon()" required="">
+                    <option *ngFor="let pantheon of pantheons; index as i" [ngValue]="pantheon.pantheon_id">{{pantheon.pantheon_name}}</option>
                 </select>
             </label>
         </div>
-        <h5 class="red-alert" role="alert" *ngIf="message">{{message}}</h5>
+
+        <h5 class="red-alert" role="alert" *ngIf="deletePantheon.controls['checkbox'].errors?.required" style=" text-transform: none;">Please Confirm</h5>
         <div>
             <label>
+                is this the item you want to delete?
                 <input type="checkbox" formControlName="checkbox" name="agrees" required="">
-                Please confirm if this is the item you want to delete
             </label>
         </div>
         <div>
             <button type="submit" name="send">Delete</button>
         </div>
     </form>
+    <h5 class="green-alert" role="alert" *ngIf="success">Pantheon Deleted successfully!</h5>
 </section>
