--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       </li>
       
       <!-- Regions tab -->
-      <li class="withsubnav navlink">
+      <li class="withsubnav navlink" *ngIf="dontshowme">
         <a class="text-align-center" routerLink="/regions">Regions<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>        
         <ul class="subnav">
           <li class="navlink" *ngFor="let region of regions; index as i">
@@ -32,7 +32,7 @@
       </li>
       
       <!-- Religions Tab -->
-      <li class="withsubnav navlink">
+      <li class="withsubnav navlink" *ngIf="dontshowme">
         <a class="text-align-center" routerLink="/religion">Religion<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>
         <ul class="subnav">
           <li class="navlink" *ngFor="let pantheon of pantheons; index as i">
@@ -42,11 +42,11 @@
       </li>
       
       <!-- Orders Tab -->
-      <li class="withsubnav navlink">
+      <li class="withsubnav navlink" *ngIf="dontshowme">
         <a class="text-align-center" routerLink="/orders">Orders<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>
         <ul class="subnav">
           <li class="navlink" *ngFor="let order of orders; index as i">
-            <a class="text-align-center" routerLink="/orders/{{order.order_id}}">{{order.order_name}}</a>
+            <a class="text-align-center" (click)="goToOrdersPage(order.order_id)">{{order.order_name}}</a>
           </li>
         </ul>
       </li>
@@ -73,16 +73,19 @@
           </form>
           <div *ngIf="!view">
             <p class="loginTab">Not a registered user yet?</p>
-            <a class="loginTabLink" href="/registerUser" style="padding:0; color:gold">Register Here!</a>
+            <a class="loginTabLink" routerLink="/registerUser" style="padding:0; color:gold">Register Here!</a>
           </div>
           <div *ngIf="view">
-            <h4 style="padding:10px 0">Welcome!</h4>
+            <h4 style="padding:10px 0">Welcome, {{userName}}!</h4>
             <ul>
               <li>
                 <a class="text-align-center" routerLink="/user-profile">User Profile</a>
               </li>
               <li *ngIf="isAdmin === '1'">
                 <a class="text-align-center" routerLink="/admin-backoffice">Admin Backoffice</a>
+              </li>
+              <li>
+                <button title="logout" (click)="onClick()">Log Out</button>
               </li>
             </ul>
           </div>
@@ -112,41 +115,39 @@
       <ul>
         <!-- User Login Tab -->
         <li>
-          <button class="toggleTab" title="login-menu" (click)="toggleSub()">User Login</button>
-
+          <button title="login-menu" (click)="toggleSub()">User Area</button>
           <div *ngIf="reveal">
-
-            <!-- error message to appear if form is incorrect -->
-            <h5 class="red-alert" role="alert" *ngIf="errorMessage" style="color:red; text-transform: none; padding: 5px;">{{errorMessage}}</h5>
-
-            <!-- simple login form with 2 input values -->
+  
+              <!-- simple login form with 2 input values -->          
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)" *ngIf="!view">
-
-              <input type="email" name="userLogin" fromControlName="user_email" placeholder="email" autocomplete="off">
-              <input type="password" name="userPass" fromControlName="user_password" placeholder="Password" autocomplete="off">
+              
+              <!-- error message to appear if form is incorrect -->            
+              <h5 class="red-alert" role="alert" *ngIf="errorMessage" style="color:red; text-transform: none; padding: 5px;">{{errorMessage}}</h5>
+  
+              <input type="email" name="email" formControlName="user_email" placeholder="email" autocomplete="off">
+              <input type="password" name="userPass" formControlName="user_password" placeholder="Password" autocomplete="off">
+  
+              <!-- login button should only be clickable once the form values are valid -->
               <div>
-
-                <!-- login button should only be clickable once the form values are valid -->
                 <button class="login-button" name="login" type="submit" [disabled]="!loginForm.valid">login</button>
-
               </div>
-
+              
             </form>
             <div *ngIf="!view">
-
               <p class="loginTab">Not a registered user yet?</p>
               <a class="loginTabLink" href="/registerUser" style="padding:0; color:gold">Register Here!</a>
-
             </div>
             <div *ngIf="view">
-              
-              <h4 >Welcome, User!</h4>
+              <h4 style="padding:10px 0">Welcome, {{userName}}!</h4>
               <ul>
                 <li>
                   <a class="text-align-center" routerLink="/user-profile">User Profile</a>
                 </li>
-                <li>
+                <li *ngIf="isAdmin === '1'">
                   <a class="text-align-center" routerLink="/admin-backoffice">Admin Backoffice</a>
+                </li>
+                <li>
+                  <button title="logout" (click)="onClick()">Log Out</button>
                 </li>
               </ul>
             </div>
@@ -169,7 +170,7 @@
         </li>
         
         <!-- Nations tab and it's subcontent -->
-        <li class="withsubnav navlink">
+        <li class="withsubnav navlink" *ngIf="dontshowme">
           <a class="text-align-center" routerLink="/regions" (click)="toggleMenu();checkActive()">Regions<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>        
           <ul class="subnav">
             <li class="navlink" *ngFor="let region of regions; index as i">
@@ -183,7 +184,7 @@
         </li>
         
         <!-- religion tab and it's subcontent -->
-        <li class="withsubnav navlink">
+        <li class="withsubnav navlink" *ngIf="dontshowme">
           <a routerLink="/religion" (click)="toggleMenu();checkActive()">Religion<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>
           <ul class="subnav">
             <li class="navlink" *ngFor="let pantheon of pantheons; index as i">
@@ -193,7 +194,7 @@
         </li>
         
         <!-- orders tab and it's subcontent -->
-        <li class="withsubnav navlink">
+        <li class="withsubnav navlink" *ngIf="dontshowme">
           <a routerLink="/orders" (click)="toggleMenu();checkActive()">Orders<span class="icon-plus">&plus;</span><span class="icon-minus">&minus;</span></a>
           <ul class="subnav">
             <li class="navlink" *ngFor="let order of orders; index as i">
