--- a/src/app/user-area/user-area.component.scss
+++ b/src/app/user-area/user-area.component.scss
@@ -11,4 +11,11 @@ form .ng-invalid.ng-touched {
     color: red;
     text-shadow: 1px 1px 1px black;
     font-weight: 800;
+    padding: 5px;
+}
+.green-alert {
+    color: rgb(2, 194, 2);
+    text-shadow: 1px 1px 1px #000;
+    font-weight: 800;
+    padding: 5px;
 }
